# ada_features

./: .gitignore  README.md  pyproject.toml
assets/: icon.psd
mod/: icon.paa  meta.cpp  mod.cpp
mod/addons/aimsway/: README.md  config.cpp  module.hpp
mod/addons/aimsway/functions/: fn_clientInit.sqf  fn_handleEffects.sqf  fn_onPlayerSwitch.sqf  fn_preinit.sqf
mod/addons/core/: README.md  VERSION.hpp  config.cpp  macros.hpp  module.hpp
mod/addons/core/compile/: fn_compile.sqf  fn_moduleLoad.sqf  fn_moduleQueue.sqf  fn_moduleQueueExecute.sqf
mod/addons/core/functions/: fn_ppEffectCreate.sqf
mod/addons/core/functions/debug/: fn_clientInitDebug.sqf  fn_debugMessage.sqf  fn_preInitDebug.sqf  functions.hpp
mod/addons/core/functions/strings/: fn_replaceInString.sqf  functions.hpp
mod/addons/core/functions/ui/: fn_colorFromName.sqf  functions.hpp
mod/addons/core/ui/: ui.hpp
mod/addons/earplugs/: README.md  config.cpp  macros.hpp  module.hpp
mod/addons/earplugs/functions/: fn_clientInit.sqf  fn_onVehicleChanged.sqf  fn_preinit.sqf  fn_toggleEarplugs.sqf
mod/addons/suppress/: README.md  config.cpp  macros.hpp  module.hpp
mod/addons/suppress/functions/: fn_addSuppression.sqf  fn_clientInit.sqf  fn_getCover.sqf  fn_handleEffects.sqf  fn_onPlayerSwitch.sqf  fn_preinit.sqf  fn_suppressedEH.sqf
mod/addons/windowbreak/: README.md  config.cpp  macros.hpp  module.hpp
mod/addons/windowbreak/functions/: fn_breakWindow.sqf  fn_clientInit.sqf  fn_findBuilding.sqf
tools/: __init__.py  make.py  setup.py
